# vexillolinguist

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: languages.yml
scripts/: pull-languages
vexillolinguist/: __init__.py  __main__.py  color.py  utils.py
