[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vexillolinguist"
version = "0.1.0"
description = "Flag-directed, language-aware Git repo initialization tool"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages]
find = {}

[project.scripts]
vexillolinguist = "vexillolinguist:main"
